--- a/004-loading/css/style.less
+++ b/004-loading/css/style.less
@@ -1,3 +1,8 @@
+/**
+ * 我一开始的思路是把动画分成6个阶段，也就是三个圆的放大、缩小的过程。
+ * 但是答案的实现更好，它只把动画分成三个阶段，也就是放大的那三个，缩
+ * 小的部分直接使用`animation-fill: alternate`
+ */
 * {
   margin: 0;
   padding: 0;
@@ -18,10 +23,13 @@ body {
 
 }
 
+// 这个time-function从快到慢，能让动画在达到100%的时候，有一种
+// "定格感"
+@bezier: cubic-bezier(.21,.98,.6,.99);
+
 .container {
   height: 400px;
   width: 400px;
-  box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.2);
   background: #E56262;
 
   .v-h-center();
@@ -30,97 +38,62 @@ body {
     .dot {
       background-color: white;
       border-radius: 50%;
-      box-shadow: 0 0 13px 0 rgba(2px, 3px, 0, 0.3);
     }
     .dot-1 {
       .v-h-center();
       width: 90px;
       height: 90px;
-      animation: jump-jump-1 6s ease-in-out infinite;
+      animation: jump-jump-1 2s @bezier infinite alternate;
       .dot-2 {
         .v-h-center();
         width: 60px;
         height: 60px;
-        animation: jump-jump-2 6s ease-in-out infinite;
+        animation: jump-jump-2 2s @bezier infinite alternate;
         .dot-3 {
           width: 30px;
           height: 30px;
-          animation: jump-jump-3 6s ease-in-out infinite;
+          animation: jump-jump-3 2s @bezier infinite alternate;
         }
       }
     }
 
     @keyframes jump-jump-1 {
-      0% {
+      0%, 10% {
+        // 1) 光源在左上角：所以shadow有个等值的x,y偏移
+        // 2) 随着圆圈越来越大，阴影也越来越大
+        // 3) 参考答案在阴影最小的时候，向外延伸了2px，我有点不理解。有这个必要吗？
+        box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
         transform: scale(0);
-      }
-
-      16.6666% {
-        transform: scale(1);
-      }
-
-      83.3333% {
-        transform: scale(1);
       }
 
       100% {
-        transform: scale(0);
+        box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
+        transform: scale(1);
       }
     }
 
     @keyframes jump-jump-2 {
-      0% {
-        transform: scale(0);
-      }
-
-      6.6666% {
-        transform: scale(0);
-      }
-
-      23.3333% {
-        transform: scale(1);
-      }
-
-      66.666% {
-        transform: scale(1);
-      }
-
-      83.3333% {
+      0%, 40% {
+        box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
         transform: scale(0);
       }
 
       100% {
-        transform: scale(0);
+        box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
+        transform: scale(1);
       }
+
     }
 
     @keyframes jump-jump-3 {
-      0% {
-        transform: scale(0);
-      }
-
-      16.6666% {
-        transform: scale(0);
-      }
-
-      23.3333% {
-        transform: scale(0);
-      }
-
-      40% {
-        transform: scale(1);
-      }
-
-      66.666% {
-        transform: scale(0);
-      }
-
-      83.3333% {
+      0%, 70% {
+        box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
         transform: scale(0);
       }
 
       100% {
-        transform: scale(0);
+        box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
+        transform: scale(1);
       }
     }
   }
