006 profile, 看完example后的修正。

--- a/006-profile/css/style.less
+++ b/006-profile/css/style.less
@@ -41,6 +41,8 @@ body {
 .container {
   height: 400px;
   width: 400px;
+  border-radius: 3px;
+  box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.3);
   background: linear-gradient(to top right, #EEBE6C 0%, #CA7C4E 100%);
   font-family: "Open Sans", Helvetica, sans-serif;
   color: rgb(120, 100, 80);
@@ -55,6 +57,8 @@ body {
   width: 320px;
   height: 299px;
   border-radius: 3px;
+  overflow: hidden;
+  box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
   background: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
