--- a/007-notifications-search-and-menu/css/style.css
+++ b/007-notifications-search-and-menu/css/style.css
@@ -7,7 +7,10 @@
  *    weight，而另一边是600,400weight。
  *    竟然还能通过这种方式控制字体！ 最后，computed style这个工具真是好用，竟然能看渲染字体。
  *
- * 2. timeline上的圆圈
+ * 2. timeline上的圆圈外面又一个白色的"光晕"。我一开始想到的是使用outline，但是我后来发现参考答案
+ *    使用的是box-shadow。我用了一下outline，才发现outline没有outline-radius这样的属性（只有F
+ *    F有）。难怪各个ui库 input组件的outline都用box-shadow来实现，因为box-shadow会跟着border-
+ *    radius弯曲。
  */
 * {
   margin: 0;
@@ -56,21 +59,55 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 .container > .sidebar-menu {
   position: absolute;
   z-index: 10;
+  transition: transform ease-in-out 0.5s;
+  width: 170px;
+  height: 270px;
+  padding: 10px 0;
+  background-color: #43627D;
+  box-shadow: 3px 3px 9px 0 rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  left: 100px;
+}
+.container > .sidebar-menu ul {
+  list-style-type: none;
+}
+.container > .sidebar-menu ul li {
+  cursor: pointer;
+  padding: 18px 17px;
+  font-size: 14px;
+  line-height: 1;
+  color: #93B2CD;
+  transition: background-color ease-in-out 0.3s, color ease-in-out 0.3s;
+}
+.container > .sidebar-menu ul li > .fa {
+  margin-right: 8px;
+}
+.container > .sidebar-menu ul li:hover {
+  color: white;
+  background-color: #38526E;
 }
 .container > .notifications-card {
   z-index: 20;
-  width: 320px;
-  height: 299px;
+  width: 300px;
+  height: 300px;
   border-radius: 3px;
   overflow: hidden;
   box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
   background: white;
+  transition: transform ease-in-out 0.5s;
   display: flex;
   flex-direction: column;
+}
+.container.show-sidebar > .sidebar-menu {
+  transform: translateX(-50px);
+}
+.container.show-sidebar > .notifications-card {
+  transform: translateX(150px);
 }
 .notifications-card > header {
   display: flex;
@@ -80,9 +117,31 @@ body {
   padding: 0 20px;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 .notifications-card > header > input {
-  display: none;
+  opacity: 0;
+  transition: opacity ease-in-out 0.4s, transform ease-in-out 0.4s;
+  position: absolute;
+  height: 34px;
+  width: 230px;
+  font-size: 13px;
+  border-radius: 50px;
+  padding: 0 1em;
+  left: 13px;
+  border: 0;
+  transform: translateX(10px);
+  z-index: -1;
+}
+.notifications-card > header > input:focus {
+  outline: 0;
+}
+.notifications-card > header > input.show {
+  z-index: 1000;
+}
+.notifications-card > header > input.active {
+  transform: translateX(0);
+  opacity: 1;
 }
 .notifications-card > header .menu-icon {
   width: 29px;
@@ -130,6 +189,7 @@ body {
 }
 .notifications-card > header .fa.fa-search {
   font-size: 21px;
+  cursor: pointer;
   color: #B2DAFF;
 }
 .notifications-card > .notifications {
