--- a/007-notifications-search-and-menu/css/style.less
+++ b/007-notifications-search-and-menu/css/style.less
@@ -57,23 +57,61 @@ body {
   position: relative;
 
   .v-h-center();
+  overflow: hidden;
 
 }
 .container > .sidebar-menu {
   position: absolute;
   z-index: 10;
+  transition: transform ease-in-out 0.5s;
+
+  width: 170px;
+  height: 270px;
+  padding: 10px 0;
+  background-color: #43627D;
+  box-shadow: 3px 3px 9px 0 rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  left: 100px;
+
+  ul {
+    list-style-type: none;
+    li {
+      cursor: pointer;
+      padding: 18px 17px;
+      font-size: 14px;
+      line-height: 1;
+      color: #93B2CD;
+      > .fa {
+        margin-right: 8px;
+      }
+      transition: background-color ease-in-out 0.3s, color ease-in-out 0.3s;
+    }
+    li:hover {
+      color: white;
+      background-color: #38526E;
+    }
+  }
 }
 .container > .notifications-card {
   z-index: 20;
-  width: 320px;
-  height: 299px;
+  width: 300px;
+  height: 300px;
   border-radius: 3px;
   overflow: hidden;
   box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
   background: white;
+  transition: transform ease-in-out 0.5s;
 
   display: flex;
   flex-direction: column;
+}
+.container.show-sidebar {
+  > .sidebar-menu {
+    transform: translateX(-50px);
+  }
+  > .notifications-card {
+    transform: translateX(150px);
+  }
 }
 
 .notifications-card > header {
@@ -84,8 +122,31 @@ body {
   padding: 0 @h-padding;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+
   > input {
-    display: none;
+    opacity: 0;
+    transition: opacity ease-in-out 0.4s, transform ease-in-out 0.4s;
+    position: absolute;
+    height: 34px;
+    width: 230px;
+    font-size: 13px;
+    border-radius: 50px;
+    padding: 0 1em;
+    left: 13px;
+    border: 0;
+    transform: translateX(10px);
+    z-index: -1;
+    &:focus {
+      outline: 0;
+    }
+    &.show {
+      z-index: 1000;
+    }
+    &.active {
+      transform: translateX(0);
+      opacity: 1;
+    }
   }
 }
 
@@ -143,6 +204,7 @@ body {
 }
 .notifications-card > header .fa.fa-search {
   font-size: 21px;
+  cursor: pointer;
   color: @light-blue;
 }
 
