--- a/007-notifications-search-and-menu/css/style.css
+++ b/007-notifications-search-and-menu/css/style.css
@@ -11,7 +11,22 @@
  *    使用的是box-shadow。我用了一下outline，才发现outline没有outline-radius这样的属性（只有F
  *    F有）。难怪各个ui库 input组件的outline都用box-shadow来实现，因为box-shadow会跟着border-
  *    radius弯曲。
+ *
+ * 3. 在实现那个input的动画的时候，实在不知道要怎么让input在隐藏的时候，不会拦截掉menu-icon的click。
+ *    最后，我想了一个丑陋的方案（跟参考答案相比），隐藏的时候，z-index: -1，显示的时候，z-index设高。
+ *    当 **隐藏动画完成** 之后，再把z-index设置为-1。这就需要动用js了。这当中最烦的部分就是z-index会
+ *    影响动画的进行，因为它无法transition，会立即生效。但是如果不用z-index，把input放到"幕后"，我又
+ *    不知道如何让前面的input不影响后面的menu-icon click。
+ *
+ *    看了参考答案之后才发现，真的是可以让z-index高的element不挡住z-index低的element的鼠标事件......
+ *    使用pointer-event: none就可以了。这个就是参考答案优雅的地方！
+ *
+ * 4. transition-time 0.2s/0.3s 真是一个黄金时间，适用于大部分transition。
+ *
+ * 5. 忘记实现notification item的动画。感觉自己对动画的理解力还是不够。
+ *
  */
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:600,400);
 * {
   margin: 0;
   padding: 0;
@@ -32,18 +47,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v16/mem8YaGs126MiZpBA-UFVZ0e.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url(https://fonts.gstatic.com/s/opensans/v16/mem5YaGs126MiZpBA-UNirkOUuhs.ttf) format('truetype');
 }
 .container {
   height: 400px;
@@ -131,15 +134,13 @@ body {
   left: 13px;
   border: 0;
   transform: translateX(10px);
-  z-index: -1;
+  pointer-events: none;
 }
 .notifications-card > header > input:focus {
   outline: 0;
 }
-.notifications-card > header > input.show {
-  z-index: 1000;
-}
 .notifications-card > header > input.active {
+  pointer-events: all;
   transform: translateX(0);
   opacity: 1;
 }
@@ -158,7 +159,7 @@ body {
   border-radius: 3px;
 }
 .notifications-card > header .menu-icon__dash:first-child {
-  width: calc(100% - 9px);
+  width: 20px;
   position: relative;
 }
 .notifications-card > header .menu-icon__dash:first-child::after {
@@ -191,18 +192,33 @@ body {
   font-size: 21px;
   cursor: pointer;
   color: #B2DAFF;
+  transition: all ease-in-out 0.2s;
+}
+.notifications-card > header .fa.fa-search:hover {
+  color: white;
 }
 .notifications-card > .notifications {
   padding: 0 27px;
   flex: 1;
   min-height: 0;
+  position: relative;
+}
+.notifications-card > .notifications::before {
+  position: absolute;
+  left: 24px;
+  top: 0;
+  content: ' ';
+  display: block;
+  height: 100%;
+  width: 3px;
+  background-color: #EBEBEB;
 }
 .notifications-card > .notifications .notifications__item {
   cursor: pointer;
   padding-left: 16px;
-  border-left: 3px solid #EBEBEB;
   padding-bottom: 25px;
   position: relative;
+  opacity: 0;
 }
 .notifications-card > .notifications .notifications__item--active,
 .notifications-card > .notifications .notifications__item:hover {
@@ -236,5 +252,24 @@ body {
 .notifications-card > .notifications .notifications__item p.item__content {
   font-size: 15px;
   line-height: 1.33333333;
+}
+.notifications-card > .notifications .notifications__item:nth-child(1) {
+  animation: notification-item-animation 0.5s ease-out forwards 0.2s;
+}
+.notifications-card > .notifications .notifications__item:nth-child(2) {
+  animation: notification-item-animation 0.5s ease-out forwards 0.4s;
+}
+.notifications-card > .notifications .notifications__item:nth-child(3) {
+  animation: notification-item-animation 0.5s ease-out forwards 0.6s;
+}
+@keyframes notification-item-animation {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 60px, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 /*# sourceMappingURL=style.css.map */
