关于用js实现tooltip

--- a/012tooltip/css/style.less
+++ b/012tooltip/css/style.less
@@ -1,4 +1,7 @@
 // 这个没有什么太大的收获。关于Tooltip，我还是对动态化的Tooltip比较感兴趣。
+// 去看了一下poperjs的源码，真正可用的Tooltip组件，只用css是写不出来的。
+// 这其中需要计算三个对象的"三维"，触发tooltip的element、tooltip本身、viewPort
+// 然后根据这些才能计算出定位的位置，具体写了个示意代码，见tooltip.js
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:600,400,300,300italic);
 
